fix issue with species/phenophase control and updated network/station args and add statistics to clipped wms maps.

--- a/visualizations/clipped-wms-map/clipped-wms-map.component.scss
+++ b/visualizations/clipped-wms-map/clipped-wms-map.component.scss
@@ -5,19 +5,25 @@
 }*/
 .map-wrapper {
     position: relative;
-    wms-map-legend {
+    wms-map-legend,
+    clipped-wms-map-statistics {
         position: absolute;
-        bottom: 25px;
-        left: 20px;
-        width: 60%;
+        left: 10px;
         padding: 8px;
         border: 1px solid #aaa;
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 5px;
+    }
+    wms-map-legend {
+        bottom: 25px;
+        width: 60%;
         /deep/ .gridded-legend {
             width: 100%;
             height: 125px;
             border: none;
         }
+    }
+    clipped-wms-map-statistics {
+        top: 10px;
     }
 }
